sgbiotec/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: guestbook-ui
