sgbiotec/templates/ingress-crd-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`test.denniskrasnov.com`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: guestbook-ui
      port: 8080
  tls:
    certResolver: letsencrypt
