sgbiotec/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: tmp.helloworld.com
      http:
        paths:
          - path: /
            backend:
              serviceName: guestbook-ui
              servicePort: 8080
